# appcontour

./: AUTHORS  BUGS  ChangeLog  HOWTO.install_data_files  Makefile.am  Makefile.in  NEWS  README  TODO  alexander.c  alexander.h  appcontour.c  config.h.in  configure  configure.ac  contour.1  contour.c  contour.h  embedding.c  embedding.h  fox.c  fox.h  fundamental.c  fundamental.h  giovecanonify.c  giovecanonify.h  glutcontour.c  groebner.c  groebner.h  groebner_test.sh  hacon.c  hacon.h  invrules.c  knot2morse.c  laurent.c  laurent.h  mendes.c  mendes.h  parser.c  parser.h  (+15 more)
autom4te.cache/: output.0  traces.0  traces.1
bugs/: failing_kanenobu.sketch
data/: Makefile.am  Makefile.in  handlebodies_embeddings.txt  links_gausscodes.txt
doc/: datastructure.txt
dt_decode/: Makefile  dowker_thistlethwaite.c  locate_in_pak.c
examples/: Makefile.am  Makefile.in  balls_set1.sketch  borromeanrings.knot  chain.knot  conway.knot  conway_pinched.knot  disjoint_spheres.morse  double_twist.knot  due_anelli.morse  duecolline.morse  eclisseparziale.morse  eight.knot  embrace.knot  embrace_trefoil.knot  empty.morse  fox_pag132.knot  genus_2.morse  genus_2_linked.morse  genus_2l.morse  granny.knot  hacon.morse  hill.morse  hollowsphere.morse  internalexternal.morse  internalknot.morse  internalknot_nocusps.sketch  kinoshita_terasaka.knot  kinoshita_theta_curve.knot  linked_rings_twice.knot  mendes.morse  milnor_a.morse  occhi2.sketch  ochiai_mod_to_genus2.knot  ochiai_mod_to_link.knot  one_chain.knot  painted_klein_bottle.morse  potato.morse  sfera.morse  sfera2.morse  (+29 more)
examples/alexanderideals/: sample.ideal  sample_with_f.ideal
examples/embeddings/: spinner_is_interlocked.embedding  twohandcuffsringed.embedding
examples/failing_examples/: fail_cusps.morse  fail_d_f.morse  fail_datnodes.morse  fail_datnodes2.morse  fail_f.morse  otto.morse  tresfere_invd.morse
examples/fpgroups/: embrace_equiv.fpgroup  fox_pag132.fpgroup  mks_pag144.fpgroup  mks_sec3.3_p4.fpgroup  trefoilknot.fpgroup  wirtinger_of_7_5.fpgroup
examples/graphs/: hG0_1.knot  hG2_1.knot  hG2_1_then_IH.embedding  hG4_1.knot  hG5_1.knot  hG6_1.knot  hG6_2.knot  hG6_3.knot  hG6_4.knot  hG6_5.knot  hG6_6.knot  hG6_7.knot  hG6_8.knot  hG6_9.knot  hG7_1.knot  hG7_18.knot  hG7_20.knot  hG7_22.knot  hG7_23.knot  hG7_24.knot  hG7_25.knot  hG7_26.not  hG7_27.knot  hG7_28.knot  hG7_29.knot  hG7_30.knot  hG7_31.knot  hG7_32.knot  hG7_33.knot  hG7_34.knot  hG7_35.knot  hG7_36.knot  hG7_60.knot  tG0_1.knot  tG3_1.knot  tG4_1.knot  tG5_1.knot  tG5_2.knot  tG5_3.knot  tG5_4.knot  (+37 more)
examples/handlebody_knots/: README.to_be_mirrored  hk0_1.knot  hk4_1.embedding  hk4_1.knot  hk5_1.embedding  hk5_1.knot  hk5_2.embedding  hk5_2.knot  hk5_3.embedding  hk5_3.knot  hk5_4.embedding  hk5_4.knot  hk6_1.embedding  hk6_1.knot  hk6_10.embedding  hk6_10.knot  hk6_11.embedding  hk6_11.knot  hk6_12.embedding  hk6_12.knot  hk6_13.embedding  hk6_13.knot  hk6_14.embedding  hk6_14.knot  hk6_15.embedding  hk6_15.knot  hk6_16.embedding  hk6_16.knot  hk6_2.embedding  hk6_2.knot  hk6_3.embedding  hk6_3.knot  hk6_4.embedding  hk6_4.knot  hk6_5.embedding  hk6_5.knot  hk6_6.embedding  hk6_6.knot  hk6_7.embedding  hk6_7.knot  (+100 more)
examples/handlebody_knots/obsoleted/: hl6_10_old.knot  hl6_11_new.knot  hl6_11_old.knot  hl6_4_old.knot  hl6_5_old.knot  hl6_6_old.knot  hl6_7_old.knot  hl6_8_old.knot  hl6_9_old.knot
examples/higher_genus/: spinner.knot
examples/immersed/: annulus.morse  boysurface.morse  deltoid.morse  drop.morse  haefliger.morse  kleinbottle.morse  millet.morse  milnor.morse  torus1.morse
examples/knots/: goeritz.knot  gordian.dtcode  granny.dtcode  hardunknot_haken_satellite.dtcode  hardunknot_joel_hass.knot  hardunknot_kauffman_fig2.dtcode  hardunknot_kauffman_fig24.dtcode  hardunknot_kauffman_fig30.dtcode  hardunknot_kauffman_fig6.dtcode  hardunknot_kauffman_fig8.dtcode  hardunknot_manturov_fig45.dtcode  hardunknot_ochiai_fig2.dtcode  hardunknot_ochiai_fig3.dtcode  hardunknot_thistlethwaite.knot  kanenobu_0_0.knot  kanenobu_1_1.knot  kanenobu_2_0.knot  knot_10_132.knot  knot_12a_0554.knot  knot_21_morton.dtcode  knot_21_morton.sketch  knot_3_1.knot  knot_4_1.knot  knot_5_1.knot  knot_5_2.knot  knot_6_1.knot  knot_6_2.knot  knot_6_3.knot  knot_7_1.knot  knot_7_2.knot  knot_7_3.knot  knot_7_4.knot  knot_7_5.knot  knot_7_6.knot  knot_7_7.knot  knot_8_1.knot  knot_8_17.knot  knot_8_18.knot  knot_8_19.knot  knot_8_2.knot  (+15 more)
examples/knots_in_torus/: coil.knot  coil3.knot  coil3_in_torus.sketch  coil_in_torus.sketch  construction_of_knots_in_torus.txt  selflink.knot  selflink_in_torus.sketch
examples/links/: celtic.dtcode  link_2_0_1.knot  link_2_2_1.knot  link_2_4_1.knot  link_2_5_1.knot  link_2_6_1.knot  link_2_6_2.knot  link_2_6_3.knot  link_L11a303.knot  link_L11a50.knot  link_L7a1.knot  maple.dtcode  openai.knot  whitehead.knot
gtkcontour/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  config.h.in  configure  configure.ac  gtkcontour.c  gtkcontour.h  parser.c  parser.h  tasto-1.xpm  tasto0.xpm  tasto0l.xpm  tasto0r.xpm  tasto1.xpm  tasto1d.xpm  tasto1u.xpm  tasto2-1.xpm  tasto2-1caso1.xpm  tasto2-1caso2.xpm  tasto2-1caso3.xpm  tasto2-1caso4.xpm  tasto2-2.xpm  tasto2-2caso1.xpm  tasto2.xpm  tasto2caso1.xpm  tasto2caso2.xpm  tasto2caso3.xpm  tasto2caso4.xpm  tasto3.xpm  tasto3l.xpm  tasto3r.xpm
ideas/: describing_knots.url  description.html
show/: Makefile.am  Makefile.in  doptimize.c  doptimize.h  energy.c  energy.h  glutcontour.c  grcommon.c  grcommon.h  gtkcontour.c  morseevent.c  morseevent.h  nullcontour.c  showcontour.c  showcontour.h  xfigexport.c  xfigexport.h
tests/: test.01  test.01.out  test.02  test.02.out  test.03  test.03.out  test.04  test.04.out  test.05  test.05.out  test.06  test.06.out  test.07  test.07.out  test.08  test.08.out  test.09  test.09.out  test.10  test.10.out  test.11  test.11.out  test.12  test.12.out  test.13  test.13.out  test.14  test.14.out  test.15  test.15.out  test.16  test.16.out  test.17  test.17.out  test.18  test.18.out  test.19  test.19.out  test.20  test.20.out  (+70 more)
utils/: Makefile.am  (+33 more)
(+32 files in other folders)
