examplesdatadir = $(pkgdatadir)/examples

nobase_dist_examplesdata_DATA = *.knotname *.morse *.knot *.sketch embeddings/*.embedding immersed/*.morse failing_examples/*.morse knots/*.knot knots/*.sketch knots/*.dtcode links/*.knot handlebody_knots/*.embedding handlebody_knots/*.knot knots_in_torus/*.knot knots_in_torus/*.sketch fpgroups/*.fpgroup alexanderideals/*.ideal
